--- a/template/example-template.html
+++ b/template/example-template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <style>body {font-family: Arial, sans-serif;background-color: #f4f4f4;margin: 0;padding: 0;}  .container {max-width: 600px;margin: 0 auto;background: #ffffff;padding: 20px;}  .header {background-color: #0275d8;color: #ffffff;padding: 10px;text-align: center;}  .content {padding: 20px;text-align: left;}  .footer {background-color: #ddd;padding: 10px;text-align: center;}  .footer p {margin: 0;font-size: 12px;color: #666;}  .button-container {text-align: center;margin: 20px 0;}  .button {display: inline-block;padding: 10px 15px;background-color: #0275d8;color: #ffffff;text-decoration: none;border-radius: 5px;}</style>
+    <style>body {font-family: Arial, sans-serif;background-color: #f4f4f4;margin: 0;padding: 0;}  .container {max-width: 600px;margin: 0 auto;background: #ffffff;padding: 20px;}  .header {background-color: #0275d8;color: #ffffff;padding: 10px;text-align: center;}  .content {padding: 20px;text-align: left;}  .footer {background-color: #ddd;padding: 10px;text-align: center;}  .footer p {margin: 0;font-size: 12px;color: #666;}  .button-container {text-align: center;margin: 20px 0;}  .button {display: inline-block;padding: 10px 15px;background-color: #0275d8;color: #ffffff!important;text-decoration: none;border-radius: 5px;}</style>
 </head>
 <body>
 <div class="container">
